NCL-8280 Fix overflow issue for attributes names

--- a/src/components/Attributes/Attributes.module.css
+++ b/src/components/Attributes/Attributes.module.css
@@ -1,5 +1,6 @@
 .name {
   font-weight: bold;
+  word-break: break-word;
 }
 
 .minmax-grid {
